--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "d3": "^5.7.0",
+    "d3-tip": "^0.9.1",
     "echarts": "^4.2.0-rc.2",
     "muse-ui": "^3.0.1",
     "register-service-worker": "^1.5.2",
@@ -19,6 +21,7 @@
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-pwa": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
+    "d3-delaunay": "^4.1.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
